tests/error/protocol_errors/no_protocols_match.err
Error: Type mismatch (at $FILE:22:11)
   | 
20 | @guppy
21 | def bar_flt[T: (FooNat, FooInt)](t: T, n: float) -> nat:
22 |     return t.foo(n)
   |            ^^^^^^^^ Expected expression of type `nat`, got `float`

Note: Error occurred while checking the instantiation `T := Foo`

Guppy compilation failed due to 1 previous error
